kubernetes/graphkb-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker-compose.dev.yml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: graphkb-client
  name: client
  namespace: graphkb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: graphkb-client
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file ../docker-compose.dev.yml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: graphkb-client
    spec:
      containers:
        - env:
            - name: API_BASE_URL
              #value: http://localhost:8080
              value: "http://api.graphkb.svc.cluster.local:8080"
            - name: KEYCLOAK_CLIENT_ID
              value: GraphKB
            - name: KEYCLOAK_REALM
              value: PORI
            - name: KEYCLOAK_URL
              #value: http://localhost:8888/auth
              value: "http://keycloak.security.svc.cluster.local:8888/auth"
            - name: PUBLIC_PATH
              value: /
          image: bcgsc/pori-graphkb-client:latest
          name: graphkb-client
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
