kubernetes/ipr-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker-compose.dev.yml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: ipr-api
  name: api
  namespace: ipr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ipr-api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file ../docker-compose.dev.yml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: ipr-api
    spec:
      containers:
        - args:
            - npm 
            - start
          image: bcgsc/pori-ipr-api:uofc
          imagePullPolicy: IfNotPresent
          name: ipr-api
          ports:
            - containerPort: 8080
              #protocol: TCP
          volumeMounts:
            - mountPath: /keys
              name: ipr-api-cm0
              readOnly: true
          #resources:
          #  limits:
          #    memory: 512Mi
          #    cpu: "1"
          #  requests:
          #    memory: 256Mi
          #    cpu: "0.2"
      restartPolicy: Always
      volumes:
        - configMap:
            name: ipr-api-cm0
          name: ipr-api-cm0
