kubernetes/ipr-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker-compose.dev.yml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: ipr-db
  name: db
  namespace: ipr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ipr-db
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file ../docker-compose.dev.yml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: ipr-db
    spec:
      containers:
        - env:
            - name: DATABASE_NAME
              value: ipr_demo
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
            - name: POSTGRES_PASSWORD
              value: root
            - name: POSTGRES_USER
              value: postgres
            - name: READONLY_PASSWORD
              value: root
            - name: READONLY_USER
              value: ipr_ro
            - name: SERVICE_PASSWORD
              value: root
            - name: SERVICE_USER
              value: ipr_service
          image: bcgsc/pori-ipr-demodb:latest
          livenessProbe:
            exec:
              command:
                - pg_isready
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: ipr-db
          ports:
            - containerPort: 5432
              protocol: TCP
      restartPolicy: Always
