kubernetes/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker-compose.dev.yml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: keycloak
  name: keycloak
  namespace: security
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file ../docker-compose.dev.yml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
        - env:
            - name: JAVA_OPTS_APPEND
              value: -Djboss.socket.binding.port-offset=808
            - name: KEYCLOAK_PASSWORD
              value: admin
            - name: KEYCLOAK_USER
              value: admin
            - name: PROXY_ADDRESS_FORWARDING
              value: "true"
            - name: DB_VENDOR
              value: "h2"
          image: pori-keycloak
          imagePullPolicy: IfNotPresent
          #livenessProbe:
          #  exec:
          #    command:
          #      - bash
          #      - /scripts/kc_setup_keyfile.sh
          #      - http://localhost:8888/auth
          #      - admin
          #      - admin
          #      - PORI
          #      - /keys/keycloak.key
          #  failureThreshold: 5
          #  periodSeconds: 45
          #  timeoutSeconds: 10
          name: keycloak
          ports:
            - containerPort: 8888
              protocol: TCP
          volumeMounts:
            - mountPath: /keys
              name: keycloak-cm0
      restartPolicy: Always
      volumes:
        - configMap:
            name: keycloak-cm0
          name: keycloak-cm0
