kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker-compose.dev.yml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: redis
  name: redis
  namespace: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file ../docker-compose.dev.yml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - image: redis:6.2-alpine
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
      restartPolicy: Always
      hostname: "redis"
