kubernetes/graphkb_client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker-compose.dev.yml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: graphkb-client
  name: graphkb-client
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 80
  selector:
    io.kompose.service: graphkb-client
