kubernetes/ipr_api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker-compose.dev.yml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: ipr-api
  name: api
  namespace: ipr
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8080
  selector:
    io.kompose.service: ipr-api
