kubernetes/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker-compose.dev.yml convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
  selector:
    io.kompose.service: keycloak
